Update generate particular tree